Added mouse event, and nav items

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <script defer src="cards.js"></script>
         <script defer src="underlay.js"></script>
+        <script defer src="mouseClick.js"></script>
     </head>
     <body>
 
@@ -14,20 +15,27 @@
 
         </div>
 
-        <div class="character-banner-container">
-            <div class="banner">
-                <span class="card-banner"> Character Cards</span>
+        <div class="page-container">
+
+            <div class="nav">
+                
             </div>
 
-            <div class="screens" id="characterScreens">
-                <div id="infoBar">
-                    <label>Name:</span>
-                    <span class="name" id="NameField"></span>
-                    <br>
-                    <label>Age:</span>
-                    <span class="name" id="AgeField"></span>
+            <div class="character-banner-container">
+                <div class="banner">
+                    <span class="card-banner"> Character Cards</span>
                 </div>
-            </div>     
+
+                <div class="screens" id="characterScreens">
+                    <div id="infoBar">
+                        <label>Name:</span>
+                        <span class="name" id="NameField"></span>
+                        <br>
+                        <label>Age:</span>
+                        <span class="name" id="AgeField"></span>
+                    </div>
+                </div>     
+            </div>
         </div>
     </body>
 </html>
