Added Age Selector button, fixed div clicking issue.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <script defer src="cards.js"></script>
+        <script defer src="CharacterCards/cardBuilder.js"></script>
+        <script defer src="CharacterCards/toggleShowCharacterInfo.js"></script>
+        <script defer src="CharacterCards/ageSelectionButton.js"></script>
         <script defer src="underlay.js"></script>
         <script defer src="mouseClick.js"></script>
     </head>
@@ -22,6 +24,7 @@
             </div>
 
             <div class="character-banner-container">
+                <div id="button-age-order"></div>
                 <div class="banner">
                     <span class="card-banner"> Character Cards</span>
                 </div>
