--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script defer src="CharacterCards/cardBuilder.js"></script>
         <script defer src="CharacterCards/toggleShowCharacterInfo.js"></script>
         <script defer src="CharacterCards/ageSelectionButton.js"></script>
+        <script defer src="CharacterCards/nameSelectionButton.js"></script>
         <script defer src="underlay.js"></script>
         <script defer src="mouseClick.js"></script>
     </head>
@@ -24,7 +25,10 @@
             </div>
 
             <div class="character-banner-container">
-                <div id="button-age-order"></div>
+                <div class="character-buttons-container">
+                    <div id="button-name-order" class="character-buttons"></div>
+                    <div id="button-age-order" class="character-buttons"></div>
+                </div>
                 <div class="banner">
                     <span class="card-banner"> Character Cards</span>
                 </div>
