Added a popup window feature

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="popup/popup.css">
         <script defer src="CharacterCards/cardBuilder.js"></script>
         <script defer src="CharacterCards/toggleShowCharacterInfo.js"></script>
         <script defer src="CharacterCards/ageSelectionButton.js"></script>
         <script defer src="CharacterCards/nameSelectionButton.js"></script>
         <script defer src="underlay.js"></script>
         <script defer src="mouseClick.js"></script>
+        <script defer src="popup/popup.js"></script>
     </head>
     <body>
 
