1 Headache and a nice mobile version later. Also folderized css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <title>Koko</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="navAndBackground.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="popup/popup.css">
+        <link rel="stylesheet" href="CharacterConfigButtons/configButtons.css">
+        <link rel="stylesheet" href="infoBar/infoBar.css">
+        <link rel="stylesheet" href="mouseEffect/mouseEffect.css">
         <script defer src="CharacterCards/cardBuilder.js"></script>
         <script defer src="CharacterCards/toggleShowCharacterInfo.js"></script>
         <script defer src="CharacterConfigButtons/configButtonsBuilder.js"></script>
         <script defer src="underlay.js"></script>
-        <script defer src="mouseClick.js"></script>
+        <script defer src="mouseEffect/mouseClick.js"></script>
         <script defer src="popup/popup.js"></script>
-        <script defer src="infoBarAnimation.js"></script>
+        <script defer src="infoBar/infoBarAnimation.js"></script>
     </head>
     <body>
 
